Closed Bug 1622016 Opened 6 years ago Closed 6 years ago

fix up some declarations used in bug 1512471 that break when chunking changes (or presumably non-unified builds)

Categories

(Core :: Security: PSM, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: keeler, Assigned: keeler)

References

Details

(Whiteboard: [psm-assigned])

Attachments

(1 file)

Bug 1512471 added VerifySSLServerCertParent.cpp, which uses SSLServerCertVerificationJob::Dispatch(, which isn't publicly declared. It works in unified builds where the chunking happens to put that file with SSLServerCertVerification.cpp, but when that changes the build breaks.

Assignee: nobody → dkeeler
Blocks: 1512471
Priority: -- → P1
Whiteboard: [psm-assigned]
Blocks: 1024871

Bug 1512471 added VerifySSLServerCertParent.cpp, which uses
SSLServerCertVerificationJob::Dispatch, which isn't exposed in a header. It
works in unified builds where the chunking happens to put that file with
SSLServerCertVerification.cpp, but when that changes the build breaks.

Similarly, VerifySSLServerCertChild.cpp uses gPIPNSSLog without declaring it.

Pushed by dkeeler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d9e0ed762056 fix up some declarations used in bug 1512471 that break when build chunking changes r=kjacobs
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: