bug 1622016 - fix up some declarations used in bug 1512471 that break when build chunking changes r=kjacobs

Bug 1512471 added VerifySSLServerCertParent.cpp, which uses
SSLServerCertVerificationJob::Dispatch, which isn't exposed in a header. It
works in unified builds where the chunking happens to put that file with
SSLServerCertVerification.cpp, but when that changes the build breaks.

Similarly, VerifySSLServerCertChild.cpp uses gPIPNSSLog without declaring it.

Differential Revision: https://phabricator.services.mozilla.com/D66618